include relevant news

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -461,6 +461,7 @@ a {
           padding: 0.6rem 0;
         }
       }
+      @import "./news.less";
       .alteration {
         margin-top: 0;
         font-weight: 400;
