--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -270,8 +270,10 @@
       color: @result-description-color;
       font-size: 1;
       line-height: 1.3;
+      max-height: 5.2em;
       clear: both;
       overflow: hidden;
+      text-overflow: ellipsis;
 
       .date {
         font-weight: bold;
