--- a/metager/resources/less/metager/pages/resultpage/inline-results.less
+++ b/metager/resources/less/metager/pages/resultpage/inline-results.less
@@ -1,12 +1,15 @@
-> h3#news-heading {
+> h3.inline-heading {
   margin: 0;
 }
-> div#news {
+> div.inline-results {
   display: flex;
   gap: 1rem;
   overflow: auto;
   padding-bottom: 0.7rem;
-  > .news-result {
+  > .inline-result {
+    display: grid;
+    grid-template-columns: min-content;
+    grid-template-rows: auto auto auto 1fr;
     > .result-image {
       display: block;
       background-color: #b2b2b24d;
@@ -39,6 +42,8 @@
     > .age {
       color: #777;
       font-size: 0.9em;
+      display: grid;
+      align-content: end;
     }
   }
 }
