--- a/metager/resources/less/metager/pages/lang-selector.less
+++ b/metager/resources/less/metager/pages/lang-selector.less
@@ -1,3 +1,34 @@
-li.active {
-    text-decoration: underline;
+main {
+  padding-inline: 0.5rem;
+  div#languages {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(5, 1fr);
+    @media (max-width: 890px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+    @media (max-width: 740px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 620px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 420px) {
+      grid-template-columns: 1fr;
+      gap: 1rem;
+    }
+
+    > div.language {
+      > ul {
+        list-style-type: none;
+        padding: 0;
+        > li {
+          white-space: nowrap;
+          &.active {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
 }
