--- a/metager/resources/less/metager/pages/lang-selector.less
+++ b/metager/resources/less/metager/pages/lang-selector.less
@@ -1,5 +1,10 @@
 main {
   padding-inline: 0.5rem;
+  display: grid;
+  gap: 1rem;
+  > h1 {
+    margin: 0;
+  }
   div#languages {
     display: grid;
     gap: 2rem;
