--- a/metager/resources/less/metager/pages/lang-selector.less
+++ b/metager/resources/less/metager/pages/lang-selector.less
@@ -1,7 +1,7 @@
-main {
+main#main-content {
   padding-inline: 0.5rem;
   display: grid;
-  gap: 1rem;
+  row-gap: 1rem;
   > h1 {
     margin: 0;
   }
