added link to language settings

--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -110,6 +110,15 @@ div.startpage {
         }
       }
 
+      > #language {
+        text-align: center;
+        padding-block: 0.5rem;
+        > a {
+          font-size: 0.8em;
+          color: fade(@text-color, 50%);
+        }
+      }
+
       > #scroll-links {
         // creates a grid for the story-icons
         min-width: 100%;
