fix picture sizes for easy lang help page

--- a/metager/resources/less/metager/pages/help-easy-language.less
+++ b/metager/resources/less/metager/pages/help-easy-language.less
@@ -30,16 +30,35 @@
         margin-bottom: 5px!important;
     }
     .help-easy-language-image{
-        max-width: 90vw;
+        max-width: 90%;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
-        max-height: 140px;
+        max-height: 170px;
         margin-top: 4px;
         margin-bottom: 4px;
     }
-    .help-easy-language-searchfilter-and-blacklist{
-        max-height: 170px;
+    #help-easy-language-used-search-engines-image {
+        max-height: 260px;
+    }
+    #help-easy-language-searchfilter-image {
+        max-height: 190px;
+    }
+    #help-easy-language-safesearch-image {
+        max-height: 240px;
+    }
+    #help-easy-language-more-settings {
+        max-height: 250px;
+    }
+
+    #help-easy-language-bang-image{
+        max-height: 110px ;
+    }
+    .help-easy-language-key-image {
+        max-height: 270px;
+    }
+    #help-easy-language-install-metager-image{
+        max-height: 200px;
     }
 
     #help-vertial-menu-image {
@@ -51,7 +70,7 @@
     }
     #easy-help-mainpage-blacklist-image {
         max-width: 90vw;
-        max-height: 190px;
+        max-height: 200px;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
