--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -211,13 +211,7 @@ div.startpage {
           "story-icon heading"
           ". paragraph"
           ". story-links";
-        @media (max-width: 630px) {
-          grid-template-areas:
-            "story-icon heading"
-            "paragraph paragraph"
-            "story-links story-links";
-        }
-        @media (max-width: 500px) {
+        @media (max-width: 725px) {
           grid-template-columns: 1fr;
           grid-template-areas:
             "story-icon"
@@ -225,7 +219,7 @@ div.startpage {
             "paragraph"
             "story-links";
         }
-        gap: 0.5rem;
+        gap: 2rem;
         position: relative;
         align-items: center;
         padding: 8rem 0.5rem;
@@ -334,11 +328,12 @@ div.startpage {
         }
         > h1 {
           grid-area: heading;
-          font-size: clamp(26px, 6.5vw, 80px);
+          font-size: clamp(15px, 3.5vw, 80px);
           margin: 0;
           white-space: nowrap;
-          @media (max-width: 500px) {
+          @media (max-width: 725px) {
             text-align: center;
+            font-size: clamp(15px, 4.5vw, 80px);
           }
         }
         > p {
@@ -358,8 +353,10 @@ div.startpage {
             height: 100%;
             max-height: 300px;
             max-width: 150px;
-            width: 100%;
-
+            width: 10vw;
+            @media (max-width: 725px) {
+              width: 25vw;
+            }
             object-fit: contain;
           }
         }
@@ -392,7 +389,7 @@ div.startpage {
               // sets the story-button for all sections
               padding: 12px;
               border-radius: 10px;
-              font-size: 18px;
+              font-size: clamp(12px, 3.5vw, 18px);
             }
           }
         }
