--- a/metager/resources/less/metager/pages/settings.less
+++ b/metager/resources/less/metager/pages/settings.less
@@ -126,4 +126,13 @@
   .allSettings-trashcan-icon {
     height: 2em;
   }
+
+  > #external-search-service {
+    display: grid;
+    gap: 1rem;
+    > form {
+      display: grid;
+      gap: 1rem;
+    }
+  }
 }
