--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -417,7 +417,7 @@
 
     .result-open,
     .result-open-newtab,
-    .result-open-metagerkey {
+    .result-open-key {
       &,
       &:active,
       &:hover,
