added basic markup for suggestions

--- a/metager/resources/less/metager/variables-dark.less
+++ b/metager/resources/less/metager/variables-dark.less
@@ -5,6 +5,7 @@
 @background-color-mobile: @color-almost-black;
 // General text color.
 @text-color: @color-almost-white;
+@highlight-color: #626262;
 // Default textual link color.
 @link-color: #fd8307;
 // Sidebar styles
