--- a/metager/resources/less/metager/variables.less
+++ b/metager/resources/less/metager/variables.less
@@ -20,6 +20,7 @@
   sans-serif;
 // General text color.
 @text-color: @color-black;
+@highlight-color: #f7f7fa;
 // Default textual link color.
 @link-color: #06c;
 // Default Mini-Padding
