--- a/metager/resources/less/metager/general/base.less
+++ b/metager/resources/less/metager/general/base.less
@@ -183,6 +183,7 @@ i.fa {
     width: fit-content;
     text-decoration: none;
     font-size: 2.7em;
+    line-height: 1;
 
     @media (max-width: @screen-mobile) {
       font-size: 2em;
