fixed suggestbox on resultpage

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -253,7 +253,7 @@
     right: 0;
   }
 
-  &:focus-within {
+  &[data-suggest="active"]:focus-within {
     > .suggestions {
       display: grid;
     }
