allow caching suggestions

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -147,7 +147,10 @@
           height: 1em;
         }
         > div {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
           > .description {
+            grid-column: span 2;
             font-size: 0.7rem;
           }
         }
