--- a/metager/resources/less/metager/general/base.less
+++ b/metager/resources/less/metager/general/base.less
@@ -209,6 +209,8 @@ i.fa {
       font-size: 1rem;
       display: block;
       padding: 0.3rem;
+      line-height: 1;
+      padding-bottom: 0;
     }
   }
 }
