make suggestions submit buttons

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -170,6 +170,7 @@
     }
     > .suggestion {
       display: none;
+      cursor: pointer;
       align-items: center;
       gap: 1rem;
       padding: 0.25rem 0.5rem;
