fix suggestion container visible on small screens

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -124,6 +124,7 @@
   > .suggestions {
     --highlight-color: @highlight-color;
     display: grid;
+    display: none;
     overflow: hidden;
     border-left: initial;
     border-top: 0;
