--- a/metager/resources/less/metager/pages/help-easy-language.less
+++ b/metager/resources/less/metager/pages/help-easy-language.less
@@ -60,6 +60,9 @@
     #help-easy-language-install-metager-image{
         max-height: 200px;
     }
+    #help-ellipsis-image {
+        max-height: 23px;
+    }
 
     #help-vertial-menu-image {
         border-color: rgb(0, 0, 0);
