--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -275,3 +275,6 @@ background-position: 35% 20%;
     background-repeat: no-repeat;
     background-position: 50% 25%;      
 }
+#help-ellipsis-image {
+    max-height: 23px;
+}
