add help icon and add it to help page

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -278,3 +278,10 @@ background-position: 35% 20%;
 #help-ellipsis-image {
     max-height: 23px;
 }
+.easy-help-icon {
+    max-height: 20px;
+}
+.easy-help-icon-button {
+    padding-right: 0.3em;
+    margin-bottom: 0.2em;
+}
