--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -311,7 +311,7 @@ a {
           overflow: hidden;
           border-radius: 10px 10px 0 0;
           background-color: @highlight-color;
-          ;
+          cursor: pointer;
 
           >div {
             &.image {
@@ -343,66 +343,75 @@ a {
       }
 
       >.image-details {
+        @media(max-width: @full-screen-details-breakpoint) {
+          position: fixed;
+          top: 0;
+          left: 0;
+          overflow: hidden;
+          z-index: 27;
+        }
 
+        >input,
         >.details {
           display: none;
         }
 
-        >.details.default {
-          display: block;
-        }
+        @media(min-width: (@full-screen-details-breakpoint + 1)) {
+          >input:not(:checked)~.default {
+            display: block;
+          }
 
-        @media(max-width: @full-screen-details-breakpoint) {
-          z-index: 21;
-
-          >.details.default {
+          >input:checked~.default {
             display: none;
           }
         }
 
-        >:target~ :last-child {
-          display: none;
-        }
-
-        >:target {
+        >input:checked+.details {
           display: block;
-        }
 
-        @media(max-width: @full-screen-details-breakpoint) {
-          >:target {
+          @media(max-width: @full-screen-details-breakpoint) {
             display: grid;
           }
         }
 
         >.details {
-
+          height: 100dvh;
+          width: 100%;
           position: sticky;
           top: 5rem;
           max-height: 80vh;
           overflow: auto;
           max-height: calc(100vh - 5rem);
           border-radius: 10px;
+          background-color: @highlight-color;
 
           @media(max-width: @full-screen-details-breakpoint) {
             background-color: @background-color;
-            position: absolute;
-            top: 0;
-            left: 0;
-            max-height: unset;
-            max-height: 100vh;
-            overflow: hidden;
             border-radius: 0;
+            grid-template-rows: max-content 1fr;
+            grid-template-columns: 100vw;
+            grid-template-columns: 100dvw;
+            gap: 1rem;
+            max-height: none;
           }
 
-          >img {
-            max-width: 100%;
-            max-height: 100%;
-            margin: 0 auto;
+          >div.image-container {
+            display: grid;
+            place-items: center;
+
+            >img {
+              max-width: 100%;
+              max-height: 100%;
+            }
           }
 
           >.details {
-            background-color: @highlight-color;
+
             padding: 1rem;
+
+            @media(max-width: @full-screen-details-breakpoint) {
+              padding: 0 1rem;
+            }
 
             >h3 {
               line-height: 1.1;
@@ -414,20 +423,39 @@ a {
               justify-content: space-between;
               padding: .5rem 0;
 
+              >a.btn {
+                height: max-content;
+              }
+
               >.result-hoster {
                 color: inherit;
                 font-size: .8rem;
-                display: grid;
-                place-content: center;
 
-                &:hover {
-                  color: inherit;
+                &[open] {
+                  border: 1px solid @background-color;
+                }
+
+                >ul {
+                  top: 1.5rem;
+                  list-style-type: none;
+                  margin: 0;
+                  background-color: inherit;
                 }
               }
             }
 
             >.copyright {
               font-size: .7rem;
+            }
+
+            >button {
+              display: none;
+              width: 100%;
+              margin-top: 1rem;
+
+              @media(max-width: @full-screen-details-breakpoint) {
+                display: block;
+              }
             }
           }
         }
