--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -293,6 +293,29 @@ a {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
 
+        &.js-masonry {
+          >.image {
+            width: 13%;
+            margin: 1rem;
+
+            @media(max-width: 1450px) {
+              width: 15.8%;
+            }
+
+            @media(max-width: 1200px) {
+              width: 19.8%;
+            }
+
+            @media(max-width: 965px) {
+              width: 27%;
+            }
+
+            @media(max-width: 550px) {
+              width: 91%;
+            }
+          }
+        }
+
         @media(max-width: 1450px) {
           grid-template-columns: repeat(5, 1fr);
         }
@@ -376,7 +399,7 @@ a {
         }
 
         >.details {
-          height: 100dvh;
+
           width: 100%;
           position: sticky;
           top: 5rem;
@@ -390,6 +413,8 @@ a {
             background-color: @background-color;
             border-radius: 0;
             grid-template-rows: minmax(auto, 75dvh) 1fr;
+            height: 100vh;
+            height: 100dvh;
             grid-template-columns: 100vw;
             grid-template-columns: 100dvw;
             gap: 1rem;
