--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -328,6 +328,10 @@ a {
           grid-template-columns: repeat(3, 1fr);
         }
 
+        @media(max-width: 550px) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+
         grid-template-rows: masonry;
         gap: 1rem;
 
