--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -290,80 +290,64 @@ a {
       }
 
       >.image-container {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        >.images {
+          display: grid;
+          grid-template-columns: repeat(6, 1fr);
 
-        &.js-masonry {
-          >.image {
-            width: 13%;
-            margin: 1rem;
-
-            @media(max-width: 1450px) {
-              width: 15.8%;
-            }
-
-            @media(max-width: 1200px) {
-              width: 19.8%;
-            }
-
-            @media(max-width: 965px) {
-              width: 27%;
-            }
-
-            @media(max-width: 550px) {
-              width: 91%;
-            }
+          &.js-masonry {
+            display: block;
           }
-        }
 
-        @media(max-width: 1450px) {
-          grid-template-columns: repeat(5, 1fr);
-        }
+          @media(max-width: 1450px) {
+            grid-template-columns: repeat(5, 1fr);
+          }
 
-        @media(max-width: 1200px) {
-          grid-template-columns: repeat(4, 1fr);
-        }
+          @media(max-width: 1200px) {
+            grid-template-columns: repeat(4, 1fr);
+          }
 
-        @media(max-width: 965px) {
-          grid-template-columns: repeat(3, 1fr);
-        }
+          @media(max-width: 965px) {
+            grid-template-columns: repeat(3, 1fr);
+          }
 
-        @media(max-width: 550px) {
-          grid-template-columns: repeat(2, 1fr);
-        }
+          @media(max-width: 550px) {
+            grid-template-columns: repeat(2, 1fr);
+          }
 
-        grid-template-rows: masonry;
-        gap: 1rem;
+          grid-template-rows: masonry;
+          gap: 1rem;
 
-        >.image {
-          overflow: hidden;
-          border-radius: 10px 10px 0 0;
-          background-color: @highlight-color;
-          cursor: pointer;
+          >.image {
+            overflow: hidden;
+            border-radius: 10px 10px 0 0;
+            margin: 0;
+            background-color: @highlight-color;
+            cursor: pointer;
 
-          >div {
-            &.image {
-              display: flex;
-              justify-content: center;
-              height: 100%;
-
-              >img {
-                width: 100%;
+            >div {
+              &.image {
+                display: flex;
+                justify-content: center;
                 height: 100%;
-                min-height: 100px;
-                object-fit: contain;
+
+                >img {
+                  width: 100%;
+                  height: 100%;
+                  min-height: 100px;
+                  object-fit: contain;
+                }
               }
-            }
 
-            &.title {
-              white-space: nowrap;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              color: @text-color;
-              padding: .25rem .5rem;
-
-              &:hover {
+              &.title {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 color: @text-color;
+                padding: .25rem .5rem;
+
+                &:hover {
+                  color: @text-color;
+                }
               }
             }
           }
