handle image not reachable

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -344,6 +344,7 @@ a {
                 text-overflow: ellipsis;
                 color: @text-color;
                 padding: .25rem .5rem;
+                font-weight: normal;
 
                 &:hover {
                   color: @text-color;
