fix layout at the end of imagesearch

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -482,6 +482,7 @@ a {
         margin: 0 auto;
         display: grid;
         gap: 1rem;
+        grid-column: span 2;
 
         >h3 {
           margin: 0;
@@ -542,6 +543,14 @@ a {
             }
           }
         }
+      }
+
+      >#engine-footer {
+        grid-column: span 2;
+      }
+
+      >#backtoptop {
+        grid-column: span 2;
       }
     }
   }
