--- a/metager/resources/less/metager/pages/resultpage/inline-results.less
+++ b/metager/resources/less/metager/pages/resultpage/inline-results.less
@@ -1,29 +1,38 @@
-> h3.inline-heading {
+>h3.inline-heading {
   margin: 0;
+
+  >a {
+    font-size: .6em;
+  }
 }
-> div.inline-results {
+
+>div.inline-results {
   display: flex;
   gap: 1rem;
   overflow: auto;
   padding-bottom: 0.7rem;
-  > .inline-result {
+
+  >.inline-result {
     display: grid;
     grid-template-columns: min-content;
     grid-template-rows: auto auto auto 1fr;
-    > .result-image {
+
+    >.result-image {
       display: block;
       background-color: #b2b2b24d;
       height: 6.5rem;
       overflow: hidden;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
-      > img {
+
+      >img {
         height: 100%;
         display: block;
         margin-inline: auto;
       }
     }
-    > .result-headline {
+
+    >.result-headline {
       display: block;
       font-size: 1rem;
       line-height: 1.2;
@@ -32,14 +41,16 @@
       text-overflow: ellipsis;
       color: inherit;
     }
-    > .result-link {
+
+    >.result-link {
       display: block;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 11em;
     }
-    > .age {
+
+    >.age {
       color: #777;
       font-size: 0.9em;
       display: grid;
