delete searchword associator in help and easy help

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -136,7 +136,7 @@
 .help-topic-row {
     display: flex;
     gap:1rem;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     flex-wrap:wrap;
 }
 .back-arrow{
@@ -213,7 +213,7 @@ background-position: 35% 20%;
     background-position: 55% 35%;
         
 }
-#help-topic-searchinsearch {
+#help-topic-key {
     background-image: url("/img/key-icon-help.svg");
     background-size: 60px;
     background-repeat: no-repeat;
@@ -256,12 +256,6 @@ background-position: 35% 20%;
     background-size: 110px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
-}
-#help-topic-asso {
-    background-image: url("/img/suchwortasso.svg");
-    background-size: 50px;
-    background-repeat: no-repeat;
-    background-position: 50% 20%;      
 }
 #help-topic-proxy {
     background-image: url("/img/proxy.svg");
