--- a/metager/resources/less/metager/general/base.less
+++ b/metager/resources/less/metager/general/base.less
@@ -176,7 +176,7 @@ i.fa {
     margin-bottom: 25px;
   }
 
-  > a.logo {
+  >a.logo {
     .logo;
     display: block;
     width: fit-content;
@@ -188,23 +188,23 @@ i.fa {
       font-size: 2em;
     }
 
-    > img {
+    >img {
       width: 4.6em;
     }
   }
 
-  > a.lang {
+  >a.lang {
     display: block;
     height: min-content;
     align-self: flex-end;
     position: relative;
     left: -10px;
     font-style: initial;
-    color: @metager-orange;
+    color: fade(@text-color, 60%);
     bottom: 2px;
-    font-weight: bold;
+    font-weight: normal;
 
-    & > span {
+    &>span {
       font-size: 1rem;
       display: block;
       padding: 0.3rem;
@@ -233,7 +233,7 @@ i.fa {
       line-height: 1;
       padding-bottom: 0;
 
-      > img {
+      >img {
         width: 4.8em;
       }
     }
@@ -249,7 +249,7 @@ i.fa {
     color: @metager-orange;
     font-weight: bold;
 
-    & > span {
+    &>span {
       font-size: 0.7rem;
       display: block;
       padding: 0.1rem;
@@ -260,6 +260,7 @@ i.fa {
 /* Links that look like text */
 
 .mutelink {
+
   &,
   &:hover,
   &:active,
@@ -270,6 +271,14 @@ i.fa {
 }
 
 /* Summary Elements */
+.skip-link {
+  position: absolute;
+  left: -100%;
+
+  &:focus {
+    left: 0;
+  }
+}
 
 summary {
   cursor: pointer;
@@ -338,6 +347,7 @@ summary {
   }
 
   &.hide-tooltip-on-resultpage:after {
+
     /* Auf kleinen Bildschirmen wird der Tooltip nicht angezeigt */
     @media (max-width: 700px) {
       display: none;
@@ -362,7 +372,7 @@ summary {
 /* For Containers that are supposed to split their content up into two columns */
 
 .two-col {
-  > * {
+  >* {
     width: 50%;
     margin: 0;
     padding: 0;
@@ -470,18 +480,21 @@ label a {
 
 // Copy button
 .copyLink {
-  > button.success {
+  >button.success {
     background-color: green;
     color: white;
+
     &::before {
       content: "✓";
       position: relative;
       padding-right: 0.5rem;
     }
   }
-  > button.failure {
+
+  >button.failure {
     background-color: #820000;
     color: white;
+
     &::before {
       content: "❌";
       position: relative;
