--- a/metager/resources/less/metager/parts/sidebar.less
+++ b/metager/resources/less/metager/parts/sidebar.less
@@ -61,6 +61,44 @@
         }
       }
 
+      >details {
+        >summary {
+          display: block;
+          padding: 10px 0px;
+
+          &:focus,
+          &:hover {
+            color: red;
+          }
+        }
+
+        >ul {
+          list-style-type: none;
+          padding: 0;
+
+          >li>a {
+            display: block;
+            font-size: 0.9em;
+            padding: 6px 20px;
+            width: 100%;
+            clear: both;
+            font-weight: normal;
+            line-height: 1.42857143;
+            margin-left: 2px;
+          }
+        }
+
+        &[open] {
+          >summary {
+            >span.caret {
+              border-top: 0 solid;
+              border-bottom: 4px solid;
+              transition: border-top 0.1s, border-bottom 0.1s 0.1s;
+            }
+          }
+        }
+      }
+
       &>label {
         font-size: 1.1em;
         font-weight: normal;
@@ -305,7 +343,7 @@
 
 #sidebar-img-contact {
   height: 13px;
-  margin-left: 10px;
+  margin-left: 23px;
   margin-right: 8px;
 }
 
@@ -318,7 +356,13 @@
 #sidebar-img-services {
   height: 20px;
   margin-right: 9px;
-  margin-left: 10px;
+  margin-left: 23px;
+}
+
+#sidebar-img-settings {
+  height: 20px;
+  margin-right: 9px;
+  margin-left: 23px;
 }
 
 #sidebar-img-map {
@@ -341,7 +385,7 @@
 #sidebar-img-info {
   height: 18px;
   margin-top: -4px;
-  margin-left: 7px;
+  margin-left: 15px;
   margin-right: 8px;
 }
 
