--- a/metager/resources/less/metager/parts/sidebar.less
+++ b/metager/resources/less/metager/parts/sidebar.less
@@ -70,6 +70,10 @@
           &:hover {
             color: red;
           }
+
+          >img {
+            filter: invert(@icon-color);
+          }
         }
 
         >ul {
